Add products to stores
